# sheet_1

./: .gitignore  .pre-commit-config.yaml  2d.ipynb  README.md  documentation_simulate.ipynb  pyproject.toml
docs/: documentation_simulate_copy.ipynb  index.rst
docs/source/: api.rst  conf.py  documentation_simulate_copy.ipynb  example.ipynb  index.rst  installation.rst  notebook.rst  tutorial.rst
docs/source/_autosummary/: sheet_1.apply_cx_cuda.rst  sheet_1.apply_cx_numba.rst  sheet_1.apply_cx_on_state.rst  sheet_1.apply_u_cuda.rst  sheet_1.apply_u_numba.rst  sheet_1.apply_u_on_state.rst  sheet_1.hello.rst  sheet_1.quantum_simulator.rst  sheet_1.simulate.rst  sheet_1.simulate_cuda.rst  sheet_1.simulate_numba.rst
playground/: test.py
src/sheet_1/: __init__.py  apply_cx_cuda.py  apply_cx_numba.py  apply_cx_on_state.py  apply_u_cuda.py  apply_u_numba.py  apply_u_on_state.py  benchmark_numba.py  pauli_maticies.py  qiskit_introduction_a.py  qiskit_introduction_bcd.py  quantum_simulator.py  runtime.py  simulator_cuda.py  simulator_numba.py  test_cx.py  test_cx_numba.py  test_quantum_simulator.py  test_simulator.py  test_u.py  test_u_numba.py
tests/: conftest.py  test_benchmark.py  test_benchmark_cuda.py  test_benchmark_numba.py  test_cx.py  test_cx_numba.py  test_simulator.py  test_u.py  test_u_numba.py
