[project]
name = "sheet-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Paul", email = "paul.seyffer@outlook.de" }
]
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "nbsphinx>=0.9.8",
    "numpy>=2.4.3",
    "pre-commit>=4.5.1",
    "pylatexenc>=2.10",
    "pytest>=9.0.2",
    "qiskit>=2.3.1",
    "qiskit-aer>=0.17.2",
    "ruff>=0.15.7",
    "ty",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["E501"]


[tool.ty]

[tool.ty.rules]
unused-ignore-comment = "warn"
redundant-cast = "ignore"
possibly-missing-attribute = "error"
possibly-missing-import = "error"

[dependency-groups]
dev = [
    "myst-nb>=1.2.0",
    "sphinx>=9.1.0",
    "sphinx-rtd-theme>=3.1.0",
]


